<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/example_logo"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/companyHeader"
        android:onClick="onClickLogout"
        />

    <TextView
        android:id="@+id/companyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Customer Sign-In"
        android:gravity="center"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!--<Button-->
        <!--android:id="@+id/button1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/button1"-->
        <!--android:textSize="15sp"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--app:layout_constraintTop_toBottomOf="@id/companyHeader"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--/>-->

    <EditText
        android:id="@+id/customerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/companyHeader"
        android:layout_marginTop="8dp"
        android:hint="@string/namehint"
        android:inputType=""
        app:layout_constraintTop_toBottomOf="@+id/companyHeader"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/customerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameBox"
        android:layout_marginTop="8dp"
        android:hint="@string/phonehint"
        android:inputType=""
        app:layout_constraintTop_toBottomOf="@+id/customerName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/customerZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/openUp"
        android:layout_marginTop="8dp"
        android:hint="@string/ziphint"
        android:inputType=""
        app:layout_constraintTop_toBottomOf="@+id/customerPhone"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameBox"
        android:layout_marginTop="8dp"
        android:hint="@string/emailhint"
        android:inputType=""
        app:layout_constraintTop_toBottomOf="@+id/customerZip"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="New Customers Sign-Up"
        android:onClick="onSubmitClick"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signin"
        android:layout_width="230dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Existing Customers Sign-In"
        android:onClick="onSubmitClick"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        tools:ignore="MissingConstraints" />




</android.support.constraint.ConstraintLayout>